apps/sgrep-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgrep-demo
  namespace: default
spec:
  selector:
    app: sgrep-demo
  ports:
    - port: 80
      targetPort: 8000
