apps/sgrep-demo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgrep-demo
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: sgrep.r-tan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sgrep-demo
                port:
                  number: 80
